# Zadacha_odin

./: .gitignor  README.md  main.py  pyproject.toml
